apps/production/mi-carpeta-medica-dev/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-carpeta-medica-ui
  namespace: mi-carpeta-medica-dev
spec:
  selector:
    app: mi-carpeta-medica-ui
  ports:
    - name: http
      port: 80
      targetPort: 3000
